Version 1.6
------------------------------------------------------------------------------

* `rbind.fill` tries harder to keep attributes, retaining the attributes from
  the first ocurrence of each column it finds

* allow arrange to work with one column data frames

Version 1.5.2
------------------------------------------------------------------------------

* `d*ply` returns correct number of rows when function returns vector

* fix NAMESPACE bug which was causing problems with ggplot2

Version 1.5.1
------------------------------------------------------------------------------

* `rbind.fill` now treats 1d arrays in the same way as `rbind` (i.e. it turns
  them into ordinary vectors)

* fix bug in rename when renaming multiple columns

Version 1.5 (2011-03-02)
------------------------------------------------------------------------------

NEW FEATURES

* new `strip_splits` function removes splitting variables from the data frames
  returned by `ddply`.

* `rename` moved in from reshape, and rewritten.

* new `match_df` function makes it easy to subset a data frame to only contain
  values matching another data frame. Inspired by
  http://stackoverflow.com/questions/4693849.

BUG FIXES

* `**ply` now works when passed a list of functions

* `*dply` now correctly names output even when some output combinations are
  missing (NULL) (Thanks to bug report from Karl Ove Hufthammer)

* `*dply` preserves the class of many more object types.

* `a*ply` now correctly works with zero length margins, operating on the
  entire object (Thanks to bug report from Stavros Macrakis)

* `join` now implements joins in a more SQL like way, returning all possible
  matches, not just the first one. It is still a (little) faster than merge.
  The previous behaviour is accessible with `match = "first"`.

* `join` is now more symmetric so that `join(x, y, "left")` is closer to
  `join(y, x, "right")`, modulo column ordering
